[project]
name = "ascii-filetree"
version = "0.1.0"
description = "ASCII curses file tree viewer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wetair1" }]
keywords = ["ascii", "curses", "terminal", "tui", "files", "tree"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console :: Curses",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.ascii-filetree]
entrypoint = "main.py"
stdlib_only = true
